fix: treat empty data collection as failed